<resources>
    <string name="app_name">MobileProject</string>
    <string name="contactInfo">
You can find us via our contact bellow:-
Email: szain@Birzeit.edu
Phone: +1 (123) 456-7890
Office Hours: Mon-Thu, 10 AM - 5 PM
Address: Birzeit University, Birzeit, Ramallah, Palestine
</string>

    <string name="aboutUs">Explore our collection of classic and unique cars. From iconic models to timeless classics, each car offers a memorable driving experience. Welcome to a world of beauty on the road.</string>
    <string name="about_us_string_about_us_act">About Us?</string>
    <string name="add_personal_info_string_addbinfo">Add Personal Info</string>
    <string name="first_name_string_addbinfo">First Name</string>
    <string name="last_name__string_addbinfo">Last Name</string>
    <string name="id_number_string_addbinfo">ID Number</string>
    <string name="birthday_string_addbinfo">Birthday</string>
    <string name="start_date_string_addbinfo">Start Date</string>
    <string name="end_date_string_addbinfo">End Date</string>
    <string name="do_you_agree_to_our_terms_and_conditions_string_addbinfo">Do you agree to our terms and conditions?</string>
    <string name="add_payment_info_string_addbinfo">Add Payment Info</string>
    <string name="card_number_string_addbinfo">Card Number</string>
    <string name="exp_date_string_addbinfo">Exp Date</string>
    <string name="cvc_string_addbinfo">CVC</string>
    <string name="save_this_payment_information_for_future_purchases_string_addbinfo">Save this payment information for future purchases</string>
    <string name="rent_string_addbinfo">Rent</string>
    <string name="continue_string_bcomplete">CONTINUE</string>
    <string name="booking_details__string_bcomplete">Booking Details</string>
    <string name="dateinfo_string_bcomplete">31/12/2024 - 05/01/2025</string>
    <string name="total_price__string_bcomplete">Total Price:</string>
    <string name="vehicle_license_fees_string_bcomplete">Vehicle License Fees: 0.65%</string>
    <string name="fees_string_bcomplete">Fees</string>
    <string name="price_breakdown__string_bcomplete">Price BreakDown</string>
    <string name="price_per_day_string_bcomplete">price per day:</string>
    <string name="price_during_the_booking_period_string_bcomplete">price during the booking period:</string>
    <string name="rent_carinfo">Rent</string>
    <string name="bookings_display_bookings">Bookings</string>
    <string name="find_us_string_find_us">Find us?</string>
    <string name="you_can_find_us_in_the_location_below_string_find_us">You can find us in the location below</string>
    <string name="birzeit_university_ramallah_palestine_string_find_us">Birzeit University - Ramallah (Palestine)</string>
    <string name="log_in_string_log_in">Log in</string>
    <string name="log_in_string_log_inn">Log In</string>
    <string name="don_t_have_an_account_string_log_in">Don\'t Have an Account?</string>
    <string name="register_string_log_in">Register</string>
    <string name="trending_main_page">Trending</string>
    <string name="search_main_page">Search</string>
    <string name="manage_cars_mainB_page">Manage Cars</string>
    <string name="manage_bookings_mainB_page">Manage Bookings</string>
    <string name="id_manage_add_car">ID</string>
    <string name="brand_model_manage_add_car">Brand Model</string>
    <string name="seat_number_manage_add_car">Seat Number</string>
    <string name="color_manage_add_car">Color</string>
    <string name="gear_type_manage_add_car">Gear Type</string>
    <string name="price_per_day_manage_add_car">Price per Day</string>
    <string name="year_manage_add_car">Year</string>
    <string name="add_manage_add_car">Add</string>
    <string name="booking_list_manage_booking">Booking List</string>
    <string name="customer_name_manage_booking">Customer Name</string>
    <string name="car_details_manage_booking">Car Details</string>
    <string name="booking_status_manage_booking">Booking Status</string>
    <string name="update_manage_booking">Update</string>
    <string name="cancel_manage_booking">Cancel</string>
    <string name="add_car_manage_car">Add Car</string>
    <string name="delete_car_manage_car">Delete Car</string>
    <string name="update_car_manage_car">Update Car</string>
    <string name="delete_by_id_manage_delete_car">Delete By ID</string>
    <string name="delete_manage_delete_car">Delete</string>
    <string name="click_to_find_more_info_about_us_string_profile">Click To Find more Info About Us!</string>
    <string name="first_name_string_profile">First name</string>
    <string name="last_name_string_profile">Last name</string>
    <string name="email_string_profile">Email</string>
    <string name="phone_number_string_profile">Phone number</string>
    <string name="gender_string_profile">Gender</string>
    <string name="date_of_birth_string_profile">Date of birth</string>
    <string name="logout_string_profile">Logout</string>
    <string name="register_string_signup">register</string>
    <string name="unlock_your_journy_with_us_string_signup">Unlock your journy with us!</string>
    <string name="first_name_string_signup">First Name</string>
    <string name="last_name_string_signup">Last Name</string>
    <string name="username_string_signup">Username</string>
    <string name="phone_number_string_signup">Phone Number</string>
    <string name="already_have_an_account_string_signup">Already Have an Account?</string>
    <string name="password_string_signup">Password</string>
    <string name="sign_in_string_signup">sign in</string>
    <string name="register_string_signup2">Register</string>
    <string name="filter_options_string_report">Filter Options</string>
    <string name="date_range_string_report">Date Range:</string>
    <string name="select_date_string_report">Select Date</string>
    <string name="car_brand_string_report">Car Brand:</string>
    <string name="summary_string_report">Summary</string>
    <string name="total_rentals_string_report">Total Rentals:</string>
    <string name="total_revenue_string_report">Total Revenue:</string>
    <string name="most_rented_car_string_report">Most Rented Car:</string>
    <string name="model_string_item_car">Model</string>
    <string name="year_string_item_car">Year</string>
    <string name="model_string_card">Pink G-wagon</string>
    <string name="book_string_card">Book</string>
    <string name="details_string_card">Details</string>
    <string name="price_string_card">$75/day</string>
    <string name="bookingstatus_manage_booking">Booking Status :</string>
    <string name="booking_date_manage_booking">Booking Date :</string>
    <string name="booking_id_manage_booking">Booking ID</string>
</resources>