<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ActivityPages.profile">

    <!-- Non-scrollable elements -->
    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/classicphotocover"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <include
            android:id="@+id/box_buttons"
            layout="@layout/buttons_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/imageView18"
        app:layout_constraintBottom_toTopOf="@id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="54dp"
                        android:layout_height="59dp"
                        android:layout_margin="1dp"
                        android:background="@drawable/name_tag"
                        app:srcCompat="@drawable/name_tag"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="48dp"
                        android:layout_height="43dp"
                        android:layout_margin="5dp"
                        android:layout_marginTop="80dp"
                        android:paddingTop="5dp"
                        app:srcCompat="@drawable/email"
                        tools:ignore="ContentDescription" />


                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="48dp"
                        android:layout_height="43dp"
                        android:layout_margin="5dp"
                        android:layout_marginTop="80dp"
                        android:paddingTop="5dp"
                        app:srcCompat="@drawable/call"
                        tools:ignore="ContentDescription" />


                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="48dp"
                        android:layout_height="43dp"
                        android:paddingTop="5dp"
                        app:srcCompat="@drawable/gender"
                        tools:ignore="ContentDescription" />


                    <ImageView
                        android:id="@+id/imageView15"
                        android:layout_width="48dp"
                        android:layout_height="43dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/birthday"
                        tools:ignore="ContentDescription" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="122dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fnameLable"
                        android:layout_height="35dp"
                        android:layout_width="120dp"
                        android:text="@string/first_name_string_profile"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:layout_height="35dp"
                        android:layout_width="120dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/last_name_string_profile" />

                    <TextView
                        android:id="@+id/emailLable"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/email_string_profile" />

                    <TextView
                        android:id="@+id/phoneLable"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/phone_number_string_profile" />

                    <TextView
                        android:id="@+id/citiLable"
                        android:layout_height="50dp"
                        android:layout_width="120dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/gender_string_profile" />

                    <TextView
                        android:id="@+id/BODlable"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:text="@string/date_of_birth_string_profile"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fnametxt"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lnametxt"
                        android:layout_height="35dp"
                        android:layout_width="170dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/emailtxt"
                        android:layout_height="50dp"
                        android:layout_width="170dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phonetxt"
                        android:layout_height="50dp"
                        android:layout_width="170dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gendertxt"
                        android:layout_height="50dp"
                        android:layout_width="170dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dobtxt"
                        android:layout_width="170dp"
                        android:layout_height="50dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/logout_string_profile"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="NotSibling,TouchTargetSizeCheck" />
        </LinearLayout>
    </ScrollView>

    <!-- Logout button -->

</androidx.constraintlayout.widget.ConstraintLayout>
